# rusted-datetag

./: .gitignore  Cargo.toml  README.md  build.rs  datetag-help.md
src/: datestyle.rs  datetag.rs  main.rs  texts.rs  utils.rs
tests/: cli.rs
