[package]
name = "datetag"
version = "0.1.6"
authors = ["Daniele Olmisani <daniele.olmisani@gmail.com>"]
license = "GPL-3.0"
edition = "2021"
description = "datetag is a simple command-line application to generate and manage date tags (e.g. 20240427)"
readme = "README.md"
homepage = "https://mad4j.github.io/rusted-datetag/"
repository = "https://github.com/mad4j/rusted-datetag"
keywords = ["cli", "date", "tag"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
clap-markdown = "0.1.3"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
