[package]
name = "datetag"
version = "0.3.1"
authors = ["Daniele Olmisani <daniele.olmisani@gmail.com>"]
license = "GPL-3.0"
edition = "2021"
description = "datetag is a simple command-line application to generate and manage date tags (e.g. 20240427)"
readme = "README.md"
homepage = "https://mad4j.github.io/rusted-datetag/"
repository = "https://github.com/mad4j/rusted-datetag"
keywords = ["cli", "date", "tag"]
categories = ["command-line-utilities"]
exclude = ["/resources"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
anyhow = "1.0.98"
regex = "1.11.1"
color-print = "0.3.7"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
assert_fs = "1.1.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
